# tree-sitter-dataprime

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-dataprime.h  tree-sitter-dataprime.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dataprime/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDataPrimeTests/: TreeSitterDataPrimeTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: aggregate_command.txt  block_command.txt  bottom_command.txt  choose_command.txt  comments.txt  convert_command.txt  count_command.txt  countby_command.txt  create_command.txt  dedupeby_command.txt  distinct_command.txt  enrich_command.txt  explode_command.txt  expressions.txt  extract_command.txt  filter_command.txt  find_command.txt  groupby_command.txt  join_command.txt  limit_command.txt  lucene_command.txt  move_command.txt  multigroupby_command.txt  orderby_command.txt  redact_command.txt  remove_command.txt  replace_command.txt  roundtime_command.txt  source_command.txt  stitch_command.txt  wildfind_command.txt
test/highlight/: builtin_variables.dataprime  expressions.dataprime  template_substitution.dataprime
